--- a/doc-assets/main.html
+++ b/doc-assets/main.html
@@ -1,1 +1,6 @@
-<h1>Readme homepage</h1>
+<h1 id="chatterbingo">ChatterBINGO</h1>
+<p>ChatterBINGO - the only community-created app used at a Dreamforce conference!</p>
+<p>
+	To see the AppExchange listing, go to
+	<a href="https://appexchange.salesforce.com/listingDetail?listingId=a0N30000003JfOwEAK">https://appexchange.salesforce.com/listingDetail?listingId=a0N30000003JfOwEAK</a>
+</p>
