docs: update ApexDox (format, highlight.js)

--- a/doc-assets/main.html
+++ b/doc-assets/main.html
@@ -1,4 +1,13 @@
-<h1 id="chatterbingo">ChatterBINGO</h1>
+<h1>ChatterBINGO</h1>
+<p>
+	<a href="https://github.com/dschach/ChatterBINGO/actions/workflows/ci.yml">
+		<img src="https://github.com/dschach/ChatterBINGO/actions/workflows/ci.yml/badge.svg?branch=main" alt="Commit Workflow" />
+	</a>
+	<br />
+	<a href="https://github.com/dschach/ChatterBINGO/actions/workflows/pr.yml">
+		<img src="https://github.com/dschach/ChatterBINGO/actions/workflows/pr.yml/badge.svg?branch=main" alt="PR Validation" />
+	</a>
+</p>
 <p>ChatterBINGO - the only community-created app used at a Dreamforce conference!</p>
 <p>
 	To see the AppExchange listing, go to
